adding the martingale strategy

--- a/Quant_Strategies/Simple_Moving_Average_Strat.ipynb
+++ b/Quant_Strategies/Simple_Moving_Average_Strat.ipynb
@@ -1186,12 +1186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Price      Ticker\n",
+       "strategy             0.429566\n",
+       "strategy2            0.330999\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[[\"strategy\",\"strategy2\"]].std()*np.sqrt(252)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
